# template-python

./: .editorconfig  .gitignore  README.md  pyproject.toml
projectname/: app.py
tests/: test_app.py
